# st-apps

./: .gitpod.yml  .slugignore  Makefile  Procfile  README.md  gitpod.Dockerfile  jupyter.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy-sake-gaikyo.yml  deploy-st-ndb.yml  deploy.yml  main.yml
.roo/rules/: rules.md
bigquery-search/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  main.py  pyproject.toml
bigquery-search/pages/: agent_page.py
bigquery-search/utils/: inmemory_agent.py
ndb-data/: Makefile  Procfile  README.md  app.yaml
ndb-data/dataset/: urls.csv
ndb-data/notebooks/: crawl.ipynb  eda.ipynb
ndb-data/src/: app.py
ndb-data/src/pages/: medical_checks.py  medical_practice.py  medical_prefecture.py
pdf-viewer/: app.py  requirements.txt
sake-gaikyo/: README.md  app.py  dataset.py  geocode.py  pyproject.toml  requirements.txt  setup.sh  st-config.toml
sake-gaikyo/.streamlit/: config.toml
sake-gaikyo/notebooks/: geopandas.ipynb
sake-gaikyo/rawdata/: prefs.geojson  test_2020.csv
yahoo_api/: .gitignore  Dockerfile  README.md  requirements.txt  search.py
yahoo_api/authentication/: __init__.py
yahoo_api/datasources/: bq.py
