[tool.poetry]
name = "st-apps"
version = "0.1.0"
description = ""
authors = ["uni-3"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.3.1"
pandas = "^1.3.5"
tabula-py = "^2.3.0"
geopandas = "^0.10.2"
geopy = "^2.2.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
